--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#C06C84</color>
+    <color name="colorPrimaryDark">#6C5B7B</color>
+    <color name="colorAccent">#355C7D</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
