--- a/app/src/main/res/layout/activity_select_option_auth.xml
+++ b/app/src/main/res/layout/activity_select_option_auth.xml
@@ -6,10 +6,11 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@color/colorAccent"
-    tools:context=".MainActivity">
+    tools:context=".SelectOptionAuthActivity">
 
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical">
         <ImageView
             android:layout_width="150dp"
@@ -21,38 +22,30 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/banner"
+            android:text="@string/seleccione_una_opcion"
             android:textAlignment="center"
             android:layout_margin="40dp"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/colorWhite"/>
-        <LinearLayout
+        <Button
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_margin="40dp"
-            android:gravity="bottom">
-
-            <Button
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorWhite"
-                android:background="@drawable/button_redonded"
-                android:backgroundTint="@color/colorPrimary"
-                android:layout_marginEnd="5dp"
-                android:text="@string/conductor"/>
-            <Button
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:background="@drawable/button_redonded"
-                android:backgroundTint="@color/colorWhite"
-                android:layout_marginStart="5dp"
-                android:text="@string/cliente"/>
-
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorWhite"
+            android:background="@drawable/button_redonded"
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:text="@string/iniciar_sesion"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_redonded"
+            android:backgroundTint="@color/colorWhite"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:text="@string/registrarme"/>
     </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
