--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
             android:gravity="bottom">
 
             <Button
+                android:id="@+id/soy_conductor"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
@@ -44,6 +45,7 @@
                 android:layout_marginEnd="5dp"
                 android:text="@string/conductor"/>
             <Button
+                android:id="@+id/soy_cliente"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
