--- a/app/src/main/res/layout/activity_select_option_auth.xml
+++ b/app/src/main/res/layout/activity_select_option_auth.xml
@@ -31,6 +31,7 @@
             android:textStyle="bold"
             android:textColor="@color/colorWhite"/>
         <Button
+            android:id="@+id/btn_iniciar_sesion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorWhite"
@@ -40,6 +41,7 @@
             android:layout_marginEnd="30dp"
             android:text="@string/iniciar_sesion"/>
         <Button
+            android:id="@+id/btn_registrarme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_redonded"
