--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,6 +8,8 @@
     android:layout_height="match_parent"
     tools:context=".RegisterActivity">
 
+    <include layout="@layout/action_bar_toolbar"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,9 +24,10 @@
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
-               android:layout_marginTop="20dp"
+               android:layout_marginTop="75dp"
                android:src="@drawable/pass"/>
            <com.google.android.material.textfield.TextInputLayout
+               android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
 
