Implementacion de Registro validando si es un conductor o un cliente

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -32,6 +32,7 @@
                android:layout_height="wrap_content">
 
                <com.google.android.material.textfield.TextInputEditText
+                   android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombres"
@@ -58,6 +59,7 @@
                android:layout_height="wrap_content">
 
                <com.google.android.material.textfield.TextInputEditText
+                   android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo"
@@ -84,6 +86,7 @@
                android:layout_height="wrap_content">
 
                <com.google.android.material.textfield.TextInputEditText
+                   android:id="@+id/clave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/clave"
@@ -101,6 +104,7 @@
             android:layout_margin="40dp"
             android:layout_height="match_parent">
             <Button
+                android:id="@+id/registrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/registrarme"
